[gd_scene load_steps=14 format=3 uid="uid://dmunmti0a68li"]

[ext_resource type="Script" path="res://scripts/menu_principal.gd" id="1_37kdy"]
[ext_resource type="Texture2D" uid="uid://ba3b6hcm4kt5d" path="res://recursos/fondos/background.png" id="1_cjx4n"]
[ext_resource type="Texture2D" uid="uid://cdejo053xljve" path="res://icon.png" id="2_044vi"]
[ext_resource type="Texture2D" uid="uid://dgublrcismbqf" path="res://recursos/fondos/RoninSinFondo.png" id="3_dqiv4"]
[ext_resource type="FontFile" uid="uid://cw20mwo8wpqyv" path="res://recursos/fonts/advanced_pixel-7.ttf" id="3_usmff"]
[ext_resource type="PackedScene" uid="uid://cfslghaw6p1ir" path="res://escenas/Screens/UI/boton_jugar.tscn" id="5_jg4mt"]
[ext_resource type="PackedScene" uid="uid://b265ytd12gjcx" path="res://escenas/Screens/UI/boton_opciones.tscn" id="6_rmdbd"]
[ext_resource type="PackedScene" uid="uid://dkvnfh7p51hao" path="res://escenas/Screens/UI/boton_salir.tscn" id="7_ym7t4"]
[ext_resource type="PackedScene" uid="uid://6vvpsq0bnw" path="res://escenas/Screens/UI/boton_credits.tscn" id="8_uw164"]
[ext_resource type="AudioStream" uid="uid://cr1vxupa01p7c" path="res://recursos/musica/Inicio_bella-ciao.mp3" id="9_dg8cc"]
[ext_resource type="AudioStream" uid="uid://bxxgksem1dg5a" path="res://recursos/fx/ClickPlastic.wav" id="10_no81e"]

[sub_resource type="LabelSettings" id="LabelSettings_c22q6"]
font = ExtResource("3_usmff")
font_size = 30
font_color = Color(0.878431, 0.117647, 0.529412, 1)
outline_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_edcsi"]
font = ExtResource("3_usmff")
font_size = 30
font_color = Color(0.878431, 0.117647, 0.529412, 1)
outline_size = 1

[node name="menuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37kdy")

[node name="fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_cjx4n")

[node name="iconoJuego" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_044vi")
expand_mode = 1

[node name="texto" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_right = 288.0
offset_bottom = 64.0

[node name="nombreJuego" type="Label" parent="texto"]
layout_mode = 2
text = "World Noid"
label_settings = SubResource("LabelSettings_c22q6")

[node name="by" type="Label" parent="texto"]
layout_mode = 2
text = "By Los Ronin
Games"
label_settings = SubResource("LabelSettings_edcsi")
horizontal_alignment = 1

[node name="iconoEmpresa" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 64.0
offset_right = 288.0
offset_bottom = 192.0
texture = ExtResource("3_dqiv4")
expand_mode = 1

[node name="iconoEmpresa2" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 192.0
texture = ExtResource("3_dqiv4")
expand_mode = 1
flip_h = true

[node name="botones" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 224.0
offset_right = 288.0
offset_bottom = 424.0

[node name="boton_jugar" parent="botones" instance=ExtResource("5_jg4mt")]
layout_mode = 2

[node name="boton_opciones" parent="botones" instance=ExtResource("6_rmdbd")]
layout_mode = 2

[node name="boton_Credits" parent="botones" instance=ExtResource("8_uw164")]
layout_mode = 2

[node name="boton_salir" parent="botones" instance=ExtResource("7_ym7t4")]
layout_mode = 2

[node name="AudioMenuPrincipal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_dg8cc")

[node name="AudioBoton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_no81e")
bus = &"SFX"

[connection signal="pressed" from="botones/boton_jugar/imagenBoton" to="." method="_on_jugar_boton_pressed"]
[connection signal="pressed" from="botones/boton_opciones/imagenBoton" to="." method="_on_opciones_boton_pressed"]
[connection signal="pressed" from="botones/boton_Credits/imagenBoton" to="." method="_on_Credits_boton_pressed"]
[connection signal="pressed" from="botones/boton_salir/imagenBoton" to="." method="_on_salir_boton_pressed"]

[editable path="botones/boton_jugar"]
[editable path="botones/boton_opciones"]
[editable path="botones/boton_Credits"]
[editable path="botones/boton_salir"]
